--- a/src/lab/exp3/Experiment.html
+++ b/src/lab/exp3/Experiment.html
@@ -117,9 +117,9 @@
 <li>
 								Linux users should run Start.jar by executing the following command in the terminal. <br/>
 								Change to the Virtual Lab Directory. <br/>
-<i><b>$</b> cd VirtualLabGraphics/</i> <br/>
+	<i><span style="background-color: #D3D3D3"><b>$</b> cd VirtualLabGraphics/</span></i> <br/>
 								Execute the experiment using the command: <br/>
-<i><b>$</b> java -jar Start.jar</i>
+	<i><span style="background-color: #D3D3D3"><b>$</b> java -jar Start.jar</span></i>
 </li>
 </ul>
 </li>
@@ -129,9 +129,9 @@
 <li>
 								Alternatively, Linux/MacOSX users can start the experiment by as described below. <br/>
 								Change to the Virtual Lab Directory. <br/>
-<i><b>$</b> cd VirtualLabGraphics/</i> <br/>
+	<i><span style="background-color: #D3D3D3"><b>$</b> cd VirtualLabGraphics/</span></i> <br/>
 								Execute the experiment using the command: <br/>
-<i><b>$</b> ./Experiment.sh 3</i>
+	<i><span style="background-color: #D3D3D3"><b>$</b> ./Experiment.sh 3</span></i>
 </li>
 <li>
 								Alternatively, Windows users can start the experiment by double clicking the Experiment3.bat file.
